#3 Main, Community 액티비티 분리, fragment_ai_chat.xml 제작

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="myCelebChatBackground">#F2F2F2</color>
+
+    <color name="imy_text_gray">#8391A1</color>
+    <color name="imy_text">#43D681</color>
+    <color name="imy_chart">#7EFF06</color>
+    <color name="imy_chart_gray">#D9D9D9</color>
+    <color name="imy_toolbar_white">#FFFFFF</color>
 </resources>
