#3.1 fragment_community_home.xml 제작

--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -67,4 +67,17 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/community_nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:navGraph="@navigation/community_nav_graph" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
