--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -16,6 +16,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/baseline_person_24"
+            app:tint="@color/black"
             app:civ_border_width="2dp"
             app:civ_border_color="#D7DAE3"
             android:layout_marginTop="10dp"
