#4.1 AudioHomeFragment.xml, AudioActivity.kt, audio_home_item.xml ImageAdapter.kt 뼈대 완성 뷰페이저, dataBinding 실험 성공, Glide 라이브러리 적용

--- a/app/src/main/res/layout/activity_audio.xml
+++ b/app/src/main/res/layout/activity_audio.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/audio_nav_host_fragment">
+        app:layout_constraintBottom_toTopOf="@+id/audioContainer">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -69,7 +69,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/audio_nav_host_fragment"
+        android:id="@+id/audioContainer"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
