--- a/app/src/main/res/navigation/audio_nav_graph.xml
+++ b/app/src/main/res/navigation/audio_nav_graph.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/audio_nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/audio_nav_graph"
+    app:startDestination="@id/audioHomeFragment">
+
+    <fragment
+        android:id="@+id/audioHomeFragment"
+        android:name="com.devjeong.myapplication.audio.AudioHomeFragment"
+        android:label="AudioHomeFragment"
+        tools:layout="@layout/fragment_audio_home"/>
 
 </navigation>
