--- a/app/src/main/res/layout/fragment_community_chat.xml
+++ b/app/src/main/res/layout/fragment_community_chat.xml
@@ -36,40 +36,16 @@
             app:layout_constraintTop_toBottomOf="@+id/celebProfile"
             app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/aiChatDateLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/rounded_box_shape"
-                android:padding="10dp"
-                android:layout_marginTop="15dp"
-                app:layout_constraintTop_toTopOf="@+id/chatConstraint1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_calendar_today_24"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/aiChatDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="2023년 8월 29일 화요일"/>
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/aiChatRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/aiChatDateLayout"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/ll_layout_bar2"
-                tools:listitem="@layout/message_item"
+                android:padding="20dp"
+                tools:listitem="@layout/community_chat_item"
                 />
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -84,36 +60,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
 
-                <TextView
-                    android:id="@+id/tvState"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="상태 체크"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btnSpeech" />
-
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/ll_layout_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:id="@+id/btnSpeech"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:textSize="18sp"
-                        android:layout_marginStart="10dp"
-                        android:background="@drawable/rounded_box_shape"
-                        android:src="@drawable/baseline_mic_none_24"
-                        android:tint="@android:color/white"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
                     <EditText
                         android:id="@+id/et_message"
@@ -148,8 +99,6 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
